syntax = "proto3";

package cakelab.arflow_grpc.v1;

import "cakelab/arflow_grpc/v1/pose.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CakeLab.ARFlow.Grpc.V1";

/// https://docs.unity3d.com/6000.0/Documentation/ScriptReference/Pose.html
message PoseFrame {
  google.protobuf.Timestamp device_timestamp = 1;
  Pose pose = 2;
}
